log
Thu 21 Mar 2024 02:48:14 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, elemento);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
05b6c17
Thu 21 Mar 2024 02:48:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      pushback(L, elemento);
      |      ^~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
142894a
Thu 21 Mar 2024 02:48:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c101523
Thu 21 Mar 2024 02:51:42 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:22: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   62 |    int *dato = (int*)firts(L);
      |                      ^~~~~
      |                      first
exercises.c:62:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   62 |    int *dato = (int*)firts(L);
      |                ^
exercises.c:67:27: error: expected statement before ‘)’ token
   67 |      dato = (int*)next(L);)
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
7f61db7
Thu 21 Mar 2024 02:52:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:22: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   62 |    int *dato = (int*)firts(L);
      |                      ^~~~~
      |                      first
exercises.c:62:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   62 |    int *dato = (int*)firts(L);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
24a1944
Thu 21 Mar 2024 03:00:39 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:17: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   63 |    dato = (int*)firts(L);
      |                 ^~~~~
      |                 first
exercises.c:63:11: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   63 |    dato = (int*)firts(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
5dce416
Thu 21 Mar 2024 03:01:26 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  2|3
total_score: 20/70
6fb5977
